--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             margin-bottom: 2em;
             width: 90%;
             height: auto;
+            max-width: 1200px;
         }
         .container {
             display: flex;
